--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "openai>=1.58.1",
+    "pydantic>=2.10.4",
+    "python-dotenv>=1.0.1",
 ]
